[gd_scene load_steps=8 format=3 uid="uid://rhafu7ofsxx8"]

[ext_resource type="Texture2D" uid="uid://llohm7vbc7bv" path="res://background_glacial_mountains_lightened.png" id="1_buf3u"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_pwdq0"]
[ext_resource type="FontFile" uid="uid://ctf2pk0x6asf8" path="res://School Teachers.otf" id="2_80qaj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwy75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fbhu"]
bg_color = Color(0.214923, 0.613613, 0.999999, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7jhw"]
bg_color = Color(0.367501, 0.675869, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4xih"]
bg_color = Color(0.367501, 0.675869, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -322.0
offset_right = 576.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_pwdq0")

[node name="BackgroundGlacialMountainsLightened" type="Sprite2D" parent="."]
position = Vector2(577.5, 323)
scale = Vector2(3.03385, 3.03704)
texture = ExtResource("1_buf3u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.879
offset_left = -190.5
offset_top = -53.5
offset_right = 190.5
offset_bottom = -70.955
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 23

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_80qaj")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_mwy75")
theme_override_styles/hover = SubResource("StyleBoxFlat_7fbhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p7jhw")
theme_override_styles/normal = SubResource("StyleBoxFlat_t4xih")
text = "Start Game"

[node name="InfoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_80qaj")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_mwy75")
theme_override_styles/hover = SubResource("StyleBoxFlat_7fbhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p7jhw")
theme_override_styles/normal = SubResource("StyleBoxFlat_t4xih")
text = "Codex/Info"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_80qaj")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_mwy75")
theme_override_styles/hover = SubResource("StyleBoxFlat_7fbhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p7jhw")
theme_override_styles/normal = SubResource("StyleBoxFlat_t4xih")
text = "Exit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -432.5
offset_top = 31.0
offset_right = 432.5
offset_bottom = 144.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_80qaj")
theme_override_font_sizes/font_size = 125
text = "The SQL Injection Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
